--- a/external/src/main/resources/application.properties
+++ b/external/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.activemq.broker-url=tcp://localhost:61616
 
 external.allowed.imei-numbers=387785175687814,387785175687813
 
-external.target.web-service.url=http://localhost:7000/process
+external.target.web-service.url=http:103.231.40.50:5175
 
 logging.file=external-all.log
 logging.file.max-size=100MB
+
+logging.level.org.apache.http=DEBUG
